# interview

./: c_test.cpp  c_test.s  lua-unity的转换  program  run.sh  ts_test.ts  公共组件和中台.md  大厂算法题.md  大厂面试题.md  安全相关.md  批处理.ini  智能指针.md  棋牌算法.md  棋牌算法_副本.md
opengl/: BATCH_RENDERING_README.md  BUILD_INSTRUCTIONS.md  CMakeLists.txt  README.md  build_simple.bat  compile_batch.bat  compile_batch_vs.bat  compile_simple.bat  setup.bat  setup_fixed.bat
opengl/build_batch/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  OpenGLDemo.sln  OpenGLDemo.vcxproj  OpenGLDemo.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  batch_rendering.vcxproj  batch_rendering.vcxproj.filters  cmake_install.cmake
opengl/build_batch/OpenGLDemo.dir/Debug/: OpenGLDemo.exe.recipe  OpenGLDemo.ilk
opengl/build_batch/OpenGLDemo.dir/Debug/OpenGLDemo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
opengl/build_batch/OpenGLDemo.dir/Release/: OpenGLDemo.exe.recipe
opengl/build_batch/OpenGLDemo.dir/Release/OpenGLDemo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
opengl/build_batch/batch_rendering.dir/Debug/batch_rendering.tlog/: CustomBuild.write.1.tlog  batch_rendering.lastbuildstate
opengl/build_batch/batch_rendering.dir/Release/: batch_rendering.exe.recipe
opengl/build_batch/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
opengl/include/glad/: glad.h
opengl/src/: batch_rendering.cpp  glad.c  main.cpp  simple_triangle.cpp
(+153 files in other folders)
